--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <h1>
         <img src="chameron.regular.webp"
-        alt="Who Is Polka Monroe?" style="max-width:100%;height:auto;" </h1>
+        alt="Who Is Polka Monroe?" style="max-width:100%;height:100%;" </h1>
   
     <p>You can find us on these medias as well!:</p>
 
