--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src="chameron.regular.webp"
         alt="Who Is Polka Monroe?" style="max-width:100%;height:100%;" </h1>
   
-    <p>You can find us on these medias as well!:</p>
+    <!-- <p>You can find us on these medias as well!:</p> -->
 
     <!-- <nav>
       <a href="https://linktr.ee/polkamonroe" target="_blank">LINKTREE</a>
